# mshio

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_run.yml
benches/: mshio_benchmark.rs
src/: error.rs  general_parsers.rs  lib.rs  mesh_data.rs  mshfile.rs  num_parsers.rs  parsers.rs
src/parsers/: elements_section.rs  entities_section.rs  general_parsers.rs  header_section.rs  nodes_section.rs  num_parser_traits.rs  num_parsers.rs
tests/: README.md  basic.rs  bike_coarse.obj_linear.msh  bike_original.obj_curved.msh  bike_original.obj_linear.msh  circle_2d.msh  circle_2d_bin.msh  circle_2d_error.msh  circle_2d_fine.msh  circle_2d_fine_bin.msh  errors.rs  old_msh_version.msh  t13_data.msh  utils.rs
tests/data/: README.md  circle_2d.msh  circle_2d_fine_bin.msh  cylinder_3d.msh  old_msh_version.msh  sphere_coarse.msh  sphere_coarse_bin.msh  t13_data.msh
