[package]
name = "mshio"
version = "0.4.0"
authors = ["Fabian Löschner"]
license = "MIT"
description = "Parser for the gmsh MSH file format version 4.1"
readme = "README.md"
edition = "2018"

homepage = "https://github.com/w1th0utnam3/mshio"
repository = "https://github.com/w1th0utnam3/mshio"

categories = ["parser-implementations", "science"]
keywords = ["gmsh", "msh", "parser", "io", "mesh"]

[dependencies]
nom = "5.1"
num = "0.2"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
